# source-resegmenter

./: .gitlab-ci.yml  README.md  pyproject.toml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
source_resegmenter/: __init__.py  refiner.py  resegment.py
uts/refinement/: test_refiner.py
